<resources>
    <string name="app_name">Medopd Doctor</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_articles">Articles</string>
    <string name="menu_health_problems">Health Problems</string>
    <string name="menu_locations">Test Locations</string>
    <string name="menu_requested_test">Requested Tests</string>
    <string name="home_second">Home Second</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">RETRY</string>
    <string name="error_head">Something went wrong..</string>
    <string name="error_details">An alien is probably blocking your signal.</string>
    <string name="title_activity_maps">Map</string>
    <string name="api_key">AIzaSyBYLr6usgo5NqrCQA5lenjcx6xSsr4NKnY</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_Home">Home</string>
    <string name="menu_messages">Chat Support</string>
    <string name="menu_share">Refer and Earn</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_my_test">My Tests</string>
    <string name="progress_uploading">Progress Uploading</string>
    <string name="upload_success">Upload Success</string>
    <string name="upload_failure">Upload Failure</string>
    <string name="gender">Gender</string>
    <string name="icon">Icon</string>
    <string name="age">Age</string>
    <string name="prescription">Prescription</string>
    <string name="dosage">Dosage</string>
    <string name="duration">Duration</string>
    <string name="frequency">Frequency</string>
    <string name="medicine">Medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="instructions">Instructions</string>
</resources>
