<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_16dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="Add Medicine"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/DarkGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/dosage"
                    android:textColor="@color/ColorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_medicine_name" />

                <EditText
                    android:id="@+id/et_dosage_one"
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/shape_rect_outline"
                    android:ems="10"
                    android:inputType="number"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/et_dosage_two"
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:autofillHints=""
                    android:background="@drawable/shape_rect_outline"
                    android:ems="10"
                    android:inputType="number"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/et_dosage_one"
                    app:layout_constraintEnd_toStartOf="@+id/et_dosage_three"
                    app:layout_constraintStart_toEndOf="@+id/et_dosage_one"
                    app:layout_constraintTop_toTopOf="@+id/et_dosage_one"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/et_dosage_three"
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:background="@drawable/shape_rect_outline"
                    android:ems="10"
                    android:inputType="number"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/et_dosage_two"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/et_dosage_two"
                    tools:ignore="LabelFor" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@color/DarkGrey"
                    app:layout_constraintBottom_toBottomOf="@+id/et_dosage_one"
                    app:layout_constraintEnd_toStartOf="@+id/et_dosage_two"
                    app:layout_constraintStart_toEndOf="@+id/et_dosage_one"
                    app:layout_constraintTop_toTopOf="@+id/et_dosage_one" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@color/DarkGrey"
                    app:layout_constraintBottom_toBottomOf="@+id/et_dosage_two"
                    app:layout_constraintEnd_toStartOf="@+id/et_dosage_three"
                    app:layout_constraintStart_toEndOf="@+id/et_dosage_two"
                    app:layout_constraintTop_toTopOf="@+id/et_dosage_two" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/duration"
                    android:textColor="@color/ColorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sp_frequency" />

                <EditText
                    android:id="@+id/et_duration"
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/shape_rect_outline"
                    android:ems="10"
                    android:inputType="number"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16"
                    tools:ignore="LabelFor" />

                <Spinner
                    android:id="@+id/sp_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@+id/et_duration"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/et_duration"
                    app:layout_constraintTop_toTopOf="@+id/et_duration" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/frequency"
                    android:textColor="@color/ColorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_dosage_one" />

                <Spinner
                    android:id="@+id/sp_frequency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/medicine"
                    android:textColor="@color/ColorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <EditText
                    android:id="@+id/et_medicine_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:background="@drawable/shape_rect_outline"
                    android:ems="10"
                    android:hint="@string/medicine_name"
                    android:inputType="textMultiLine|textPersonName"
                    android:lines="3"
                    android:padding="@dimen/padding_10"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/grey"
                    android:onClick="onCancel"
                    android:text="@string/CANCEL"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/btn_save"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sp_instructions" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="Add"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                    app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/instructions"
                    android:textColor="@color/ColorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_duration" />

                <Spinner
                    android:id="@+id/sp_instructions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>